--- a/app/src/main/res/layout/activity_campaign_joining_options_page.xml
+++ b/app/src/main/res/layout/activity_campaign_joining_options_page.xml
@@ -67,7 +67,7 @@
         android:layout_height="400dp"
         android:layout_below="@+id/text1"
         android:layout_marginTop="25dp"
-        android:src="@drawable/bg_of_options"></ImageView>
+        android:src="#E4EFFF"></ImageView>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -84,7 +84,7 @@
             android:layout_marginLeft="50dp"
             android:layout_marginRight="50dp"
             android:layout_weight="1"
-            android:background="@drawable/option_buttons"
+            android:background="@drawable/bg_radius_ten_lightblue"
             android:text="Join Volunteer Campaign"
             android:textColor="@color/white"
             android:textSize="20dp"
@@ -100,7 +100,7 @@
             android:layout_marginTop="50dp"
             android:layout_marginRight="50dp"
             android:layout_weight="1"
-            android:background="@drawable/option_buttons"
+            android:background="@drawable/bg_radius_ten_lightblue"
             android:text="Join Unspecialized Activity"
             android:textColor="@color/white"
             android:textSize="20dp"
@@ -115,7 +115,7 @@
             android:layout_marginTop="50dp"
             android:layout_marginRight="50dp"
             android:layout_weight="1"
-            android:background="@drawable/option_buttons"
+            android:background="@drawable/bg_radius_ten_lightblue"
             android:text="Donate"
             android:textColor="@color/white"
             android:textSize="20dp"
@@ -123,66 +123,11 @@
             android:textAllCaps="false"></Button>
     </LinearLayout>
 
-
-
-
     <!--    nav sa ubos-->
-    <RelativeLayout
+    <fragment
+        android:id="@+id/navBarFragment"
+        android:name="com.intprog.helpinghands.NavBarFragment"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <ImageView
-            android:id="@+id/navBot"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_alignParentBottom="true"
-            android:src="@drawable/navbottom" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignTop="@id/navBot"
-            android:layout_alignParentBottom="true"
-            android:orientation="horizontal">
-
-            <ImageButton
-                android:id="@+id/notificationsImageButton"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginRight="20dp"
-                android:layout_marginBottom="15dp"
-                android:layout_weight="1"
-                android:background="#F4F5F5"
-                android:scaleType="fitCenter"
-                android:src="@drawable/bell" />
-
-            <ImageButton
-                android:id="@+id/homeImageButton"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginRight="20dp"
-                android:layout_marginBottom="15dp"
-                android:layout_weight="1"
-                android:background="#F4F5F5"
-                android:scaleType="fitCenter"
-                android:src="@drawable/home" />
-
-            <ImageButton
-                android:id="@+id/menuImageButton"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginRight="20dp"
-                android:layout_marginBottom="15dp"
-                android:layout_weight="1"
-                android:background="#F4F5F5"
-                android:scaleType="fitCenter"
-                android:src="@drawable/more" />
-        </LinearLayout>
-    </RelativeLayout>
-
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true" />
 </RelativeLayout>
