--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -3,32 +3,39 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     tools:context=".HomePageActivity">
 
     <FrameLayout
         android:id="@+id/headerFrameLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="65dp"
         android:background="#E4EFFF">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:orientation="horizontal"
-            android:layout_marginTop="5dp">
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
 
             <TextView
-                android:layout_width="match_parent"
+                android:id="@+id/homeTitleTextView"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginStart="10dp"
                 android:text="HelpingHands"
-                android:textSize="30sp"
-                android:textAlignment="center"
+                android:letterSpacing="0.03"
+                android:textSize="28dp"
                 android:textStyle="bold"
-                android:textColor="@color/black"/>
-
-        </LinearLayout>
+                android:textColor="#71D0F8" />
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginRight="10dp"
+                android:layout_alignParentEnd="true"
+                android:src="@drawable/logo"/>
+        </RelativeLayout>
     </FrameLayout>
 
     <TextView
@@ -36,12 +43,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Featured Opportunities"
-        android:textSize="20sp"
+        android:textSize="22sp"
         android:textColor="@color/black"
         android:textStyle="bold"
         android:layout_below="@id/headerFrameLayout"
-        android:layout_marginLeft="5dp"/>
-
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"/>
     <HorizontalScrollView
         android:id="@+id/featuredOpportunitiesHorizontalScrollView"
         android:layout_width="match_parent"
@@ -51,7 +59,7 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="170dp"
+            android:layout_height="190dp"
             android:background="#0066FF">
 
             <RelativeLayout
@@ -72,7 +80,7 @@
                     android:background="@drawable/rounded_rectangle"
                     android:clipToOutline="true"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/placeholder" />
+                    android:src="@drawable/placeholder_image1" />
 
                 <TextView
                     android:id="@+id/title"
@@ -82,7 +90,8 @@
                     android:layout_marginLeft="5dp"
                     android:text="Title"
                     android:textSize="15dp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:textColor="@color/black"/>
 
                 <TextView
                     android:id="@+id/category"
@@ -91,15 +100,17 @@
                     android:layout_below="@id/title"
                     android:layout_marginLeft="5dp"
                     android:text="Category"
-                    android:textSize="10sp" />
+                    android:textSize="10sp"
+                    android:textColor="@color/black"/>
 
                 <Button
                     android:id="@+id/button1"
                     android:layout_width="100dp"
-                    android:layout_height="30dp"
+                    android:layout_height="25dp"
                     android:layout_below="@id/category"
+                    android:layout_marginTop="10dp"
                     android:layout_marginLeft="20dp"
-                    android:backgroundTint="#98C1FF"
+                    android:background="@drawable/bg_radius_ten_lightblue"
                     android:text="View Details"
                     android:textColor="@color/black"
                     android:textSize="8sp" />
@@ -110,7 +121,7 @@
                     android:layout_height="20dp"
                     android:layout_below="@id/category"
                     android:layout_marginLeft="25dp"
-                    android:layout_marginTop="5dp"
+                    android:layout_marginTop="10dp"
                     android:layout_toRightOf="@id/button1"
                     android:background="@android:color/transparent"
                     android:scaleType="fitCenter"
@@ -135,7 +146,7 @@
                     android:background="@drawable/rounded_rectangle"
                     android:clipToOutline="true"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/placeholder" />
+                    android:src="@drawable/placeholder_image1" />
 
                 <TextView
                     android:id="@+id/title2"
@@ -145,7 +156,8 @@
                     android:layout_marginLeft="5dp"
                     android:text="Title"
                     android:textSize="15dp"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold"
+                    android:textColor="@color/black"/>
 
                 <TextView
                     android:id="@+id/category2"
@@ -154,15 +166,17 @@
                     android:layout_below="@id/title2"
                     android:layout_marginLeft="5dp"
                     android:text="Category"
-                    android:textSize="10sp" />
+                    android:textSize="10sp"
+                    android:textColor="@color/black"/>
 
                 <Button
                     android:id="@+id/button2"
                     android:layout_width="100dp"
-                    android:layout_height="30dp"
+                    android:layout_height="25dp"
                     android:layout_below="@id/category2"
+                    android:layout_marginTop="10dp"
                     android:layout_marginLeft="20dp"
-                    android:backgroundTint="#98C1FF"
+                    android:background="@drawable/bg_radius_ten_lightblue"
                     android:text="View Details"
                     android:textColor="@color/black"
                     android:textSize="8sp" />
@@ -173,7 +187,7 @@
                     android:layout_height="20dp"
                     android:layout_below="@id/category2"
                     android:layout_marginLeft="25dp"
-                    android:layout_marginTop="5dp"
+                    android:layout_marginTop="10dp"
                     android:layout_toRightOf="@id/button2"
                     android:background="@android:color/transparent"
                     android:scaleType="fitCenter"
@@ -198,7 +212,7 @@
                     android:background="@drawable/rounded_rectangle"
                     android:clipToOutline="true"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/placeholder" />
+                    android:src="@drawable/placeholder_image1" />
 
                 <TextView
                     android:id="@+id/title3"
@@ -208,7 +222,8 @@
                     android:layout_marginLeft="5dp"
                     android:text="Title"
                     android:textSize="15dp"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold"
+                    android:textColor="@color/black"/>
 
                 <TextView
                     android:id="@+id/category3"
@@ -217,15 +232,17 @@
                     android:layout_below="@id/title3"
                     android:layout_marginLeft="5dp"
                     android:text="Category"
-                    android:textSize="10sp" />
+                    android:textSize="10sp"
+                    android:textColor="@color/black"/>
 
                 <Button
                     android:id="@+id/button3"
                     android:layout_width="100dp"
-                    android:layout_height="30dp"
+                    android:layout_height="25dp"
                     android:layout_below="@id/category3"
+                    android:layout_marginTop="10dp"
                     android:layout_marginLeft="20dp"
-                    android:backgroundTint="#98C1FF"
+                    android:background="@drawable/bg_radius_ten_lightblue"
                     android:text="View Details"
                     android:textColor="@color/black"
                     android:textSize="8sp" />
@@ -236,7 +253,7 @@
                     android:layout_height="20dp"
                     android:layout_below="@id/category3"
                     android:layout_marginLeft="25dp"
-                    android:layout_marginTop="5dp"
+                    android:layout_marginTop="10dp"
                     android:layout_toRightOf="@id/button3"
                     android:background="@android:color/transparent"
                     android:scaleType="fitCenter"
@@ -250,45 +267,50 @@
         android:id="@+id/categoriesLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Categories"
-        android:textSize="20sp"
-        android:textColor="@color/black"
-        android:textStyle="bold"
         android:layout_below="@id/featuredOpportunitiesHorizontalScrollView"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="10dp"/>
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="15dp"
+        android:text="Categories"
+        android:textColor="@color/black"
+        android:textSize="22sp"
+        android:textStyle="bold" />
     
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/campaignButtons"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:orientation="horizontal"
+        android:layout_height="90dp"
+        android:background="#E4EFFF"
         android:layout_below="@id/categoriesLabel">
 
         <Button
             android:id="@+id/createCampaignButton"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/grey"
-            android:textSize="20sp"
-            android:text="Create Campaign"
-            android:layout_weight="1" />
-
-        <ImageView
-            android:layout_width="1dp"
-            android:layout_height="match_parent"/>
+            android:layout_width="160dp"
+            android:layout_height="60dp"
+            android:background="@drawable/bg_radius_ten_lightblue"
+            android:layout_marginTop="15dp"
+            android:layout_marginLeft="25dp"
+            android:textSize="17sp"
+            android:textColor="@color/white"
+            android:text="Create \nCampaign"
+            android:textAllCaps="false"/>
 
         <Button
             android:id="@+id/joinCampaignButton"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/grey"
-            android:textSize="20sp"
-            android:text="Join Campaign"
-            android:layout_weight="1"/>
+            android:layout_width="160dp"
+            android:layout_height="60dp"
+            android:background="@drawable/bg_radius_ten_lightblue"
+            android:layout_marginTop="15dp"
+            android:layout_marginRight="25dp"
+            android:textSize="17sp"
+            android:textColor="@color/white"
+            android:text="Join \nCampaign"
+            android:layout_alignParentEnd="true"
+            android:textAllCaps="false"/>
 
-    </LinearLayout>
+    </RelativeLayout>
 
     <TextView
         android:id="@+id/myProfileLabel"
@@ -344,7 +366,7 @@
             android:layout_below="@id/pfp"
             android:layout_marginLeft="15dp"
             android:layout_marginTop="5dp"
-            android:text="Insert Name"
+            android:text="Name"
             android:textColor="@color/black"
             android:textSize="20sp"
             android:textStyle="bold" />
@@ -382,61 +404,10 @@
     </RelativeLayout>
 
     <!--    nav sa ubos-->
-    <RelativeLayout
+    <fragment
+        android:id="@+id/navBarFragment"
+        android:name="com.intprog.helpinghands.NavBarFragment"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <ImageView
-            android:id="@+id/navBot"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_alignParentBottom="true"
-            android:src="@drawable/navbottom" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignTop="@id/navBot"
-            android:layout_alignParentBottom="true"
-            android:orientation="horizontal">
-
-            <ImageButton
-                android:id="@+id/notificationsImageButton"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginRight="20dp"
-                android:layout_marginBottom="15dp"
-                android:layout_weight="1"
-                android:background="#F4F5F5"
-                android:scaleType="fitCenter"
-                android:src="@drawable/bell" />
-
-            <ImageButton
-                android:id="@+id/homeImageButton"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginRight="20dp"
-                android:layout_marginBottom="15dp"
-                android:layout_weight="1"
-                android:background="#F4F5F5"
-                android:scaleType="fitCenter"
-                android:src="@drawable/home" />
-
-            <ImageButton
-                android:id="@+id/menuImageButton"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginRight="20dp"
-                android:layout_marginBottom="15dp"
-                android:layout_weight="1"
-                android:background="#F4F5F5"
-                android:scaleType="fitCenter"
-                android:src="@drawable/more" />
-        </LinearLayout>
-    </RelativeLayout>
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true" />
 </RelativeLayout>
