Git commit daw before mag pull

--- a/app/src/main/res/layout/activity_volunteer_campaign_posting_page.xml
+++ b/app/src/main/res/layout/activity_volunteer_campaign_posting_page.xml
@@ -235,6 +235,7 @@
             android:id="@+id/ageEditText"
             android:layout_width="80dp"
             android:layout_height="24dp"
+            android:hint="18 above"
             android:layout_below="@id/startDateEditText"
             android:layout_marginStart="10dp"
             android:layout_marginLeft="10dp"
