ESPINA 5.15.24 final commit for today

--- a/app/src/main/res/layout/activity_volunteer_campaign_posting_page.xml
+++ b/app/src/main/res/layout/activity_volunteer_campaign_posting_page.xml
@@ -37,15 +37,15 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="18dp"
-                android:layout_marginRight="30dp"
-                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginLeft="-30dp"
+                android:layout_marginRight="70dp"
                 android:layout_weight="1"
-                android:text="Volunteer Campaign"
+                android:text="Create Volunteer Campaign"
                 android:textColor="@color/black"
                 android:textSize="22dp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:gravity="center"/>
         </LinearLayout>
     </RelativeLayout>
 
@@ -77,14 +77,15 @@
 
 <!--    </RelativeLayout>-->
 
-<!--    <TextView-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:text="Create Post"-->
-<!--        android:textSize="25sp"-->
-<!--        android:layout_marginLeft="20dp"-->
-<!--        android:textColor="@color/black"-->
-<!--        android:textStyle="bold"/>-->
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Volunteer Campaign"
+        android:textSize="25sp"
+        android:layout_marginTop="10dp"
+        android:gravity="center"
+        android:textColor="@color/black"
+        android:textStyle="bold"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -96,7 +97,7 @@
             android:layout_width="350dp"
             android:layout_height="180dp"
             android:layout_gravity="center"
-            android:src="@drawable/img"
+            android:src="@drawable/placeholder_image1"
             android:scaleType="centerCrop"
             android:layout_marginTop="15dp"
             android:background="@drawable/bg_rectangle"
@@ -106,6 +107,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Campaign Details:"
+            android:layout_marginTop="10dp"
             android:layout_marginLeft="25dp"
             android:layout_marginRight="25dp"
             android:textSize="20sp"
