--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -65,7 +65,7 @@
             <RelativeLayout
                 android:layout_width="180dp"
                 android:layout_height="170dp"
-                android:layout_marginStart="5dp"
+                android:layout_marginStart="10dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="5dp"
                 android:layout_marginBottom="5dp"
@@ -132,7 +132,7 @@
             <RelativeLayout
                 android:layout_width="180dp"
                 android:layout_height="170dp"
-                android:layout_marginLeft="200dp"
+                android:layout_marginLeft="205dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
                 android:background="@drawable/rounded_rectangle">
@@ -198,7 +198,7 @@
             <RelativeLayout
                 android:layout_width="180dp"
                 android:layout_height="170dp"
-                android:layout_marginLeft="395dp"
+                android:layout_marginLeft="400dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
                 android:background="@drawable/rounded_rectangle">
@@ -320,6 +320,7 @@
         android:textSize="20sp"
         android:textColor="@color/black"
         android:textStyle="bold"
+        android:layout_centerInParent="true"
         android:layout_below="@id/campaignButtons"
         android:layout_marginLeft="5dp"
         android:layout_marginTop="20dp"/>
